--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,21 @@
 			<version>${org.aspectj-version}</version>
 		</dependency>	
 		
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.19</version>
+		</dependency>
+
+		<!-- JPA&Hibernate -->
+		<dependency>
+		  <groupId>org.springframework.data</groupId>
+		  <artifactId>spring-data-jpa</artifactId>
+		  <version>2.2.4.RELEASE</version>
+		</dependency>
+
+
 		<!-- MongoDB -->
         <dependency>
             <groupId>org.mongodb</groupId>
