--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
-		<org.springframework-version>5.2.3.RELEASE</org.springframework-version>
+		<org.springframework-version>5.0.7.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
@@ -56,12 +56,19 @@
 		    <version>8.0.19</version>
 		</dependency>
 
+        <!-- 스프링 ORM -->
+        <dependency>
+             <groupId>org.springframework</groupId>
+             <artifactId>spring-orm</artifactId>
+             <version>${org.springframework-version}</version>
+        </dependency>
+
 		<!-- JPA&Hibernate -->
-		<dependency>
-		  <groupId>org.springframework.data</groupId>
-		  <artifactId>spring-data-jpa</artifactId>
-		  <version>2.2.4.RELEASE</version>
-		</dependency>
+        <dependency>
+             <groupId>org.hibernate</groupId>
+             <artifactId>hibernate-entitymanager</artifactId>
+             <version>5.0.11.Final</version>
+        </dependency>
 
 
 		<!-- MongoDB -->
