--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 		    <version>8.0.19</version>
 		</dependency>
 
+		<!-- REST API -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.7</version>
+		</dependency>
+
         <!-- 스프링 ORM -->
         <dependency>
              <groupId>org.springframework</groupId>
