--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<org.springframework-version>5.2.3.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<security.version>5.2.1.RELEASE</security.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -61,6 +62,37 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.7</version>
+		</dependency>
+
+		<!-- Security -->
+		<dependency> 
+			<groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-core</artifactId> 
+			<version>${security.version}</version> 
+		</dependency> 
+		
+		<dependency> 
+			<groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-web</artifactId> 
+			<version>${security.version}</version> 
+		</dependency> 
+		
+		<dependency> 
+			<groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-config</artifactId> 
+			<version>${security.version}</version> 
+		</dependency> 
+		
+		<dependency> 
+			<groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-taglibs</artifactId> 
+			<version>${security.version}</version> 
+		</dependency> 
+		
+		<dependency> 
+			<groupId>org.springframework.security</groupId> 
+			<artifactId>spring-security-test</artifactId> 
+			<version>${security.version}</version> 
 		</dependency>
 
         <!-- 스프링 ORM -->
