--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 	
 	<context-param> 
 		<param-name>contextConfigLocation</param-name> 
-		<param-value> classpath:applicationContext.xml classpath:applicationContext-security.xml </param-value> 
+		<param-value> /WEB-INF/spring/security-context.xml </param-value> 
 	</context-param> 
 	
 	<!-- Spring Security --> 
