크로스도메인 허용

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,24 +43,28 @@
 	        <filter-name>encodingFilter</filter-name>
 	        <url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<context-param> 
-		<param-name>contextConfigLocation</param-name> 
-		<param-value> /WEB-INF/spring/security-context.xml </param-value> 
-	</context-param> 
-	
-	<!-- Spring Security --> 
-	<listener> 
-		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class> 
-	</listener> 
-	
-	<filter> 
-		<filter-name>springSecurityFilterChain</filter-name> 
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
-	</filter> 
-	<filter-mapping> 
-		<filter-name>springSecurityFilterChain</filter-name> 
-		<url-pattern>/*</url-pattern> 
+	<context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>
+	        /WEB-INF/spring/root-context.xml
+	        /WEB-INF/spring/security-context.xml
+	    </param-value>
+	</context-param>
+	<filter>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
+	<filter>
+	    <filter-name>cors</filter-name>
+	    <filter-class>com.DrK.config.cors</filter-class>
+	</filter>
+	<filter-mapping>
+	    <filter-name>cors</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
