--- a/pom.xml
+++ b/pom.xml
@@ -65,23 +65,11 @@
 		</dependency>
 
 		<!-- Security -->
-		<dependency> 
-			<groupId>org.springframework.security</groupId> 
-			<artifactId>spring-security-core</artifactId> 
-			<version>${security.version}</version> 
-		</dependency> 
-		
-		<dependency> 
-			<groupId>org.springframework.security</groupId> 
-			<artifactId>spring-security-web</artifactId> 
-			<version>${security.version}</version> 
-		</dependency> 
-		
-		<dependency> 
-			<groupId>org.springframework.security</groupId> 
-			<artifactId>spring-security-config</artifactId> 
-			<version>${security.version}</version> 
-		</dependency> 
+		<dependency>
+		  	<groupId>org.springframework.security</groupId>
+		  	<artifactId>spring-security-jwt</artifactId>
+			<version>1.0.10.RELEASE</version> 
+		</dependency>
 		
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
@@ -273,6 +261,14 @@
                     <mainClass>org.test.int1.Main</mainClass>
                 </configuration>
             </plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-war-plugin</artifactId>
+		        <version>3.2.0</version>
+		        <configuration>
+		            <failOnMissingWebXml>false</failOnMissingWebXml>
+		        </configuration>
+		    </plugin>
         </plugins>
     </build>
 </project>
