--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,11 @@
 		    <version>2.9.10.1</version>
 		</dependency>
 
-		<!-- Security -->
+		<!-- JWT -->
 		<dependency>
-		  	<groupId>org.springframework.security</groupId>
-		  	<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.10.RELEASE</version> 
+		        <groupId>io.jsonwebtoken</groupId>
+		        <artifactId>jjwt</artifactId>
+		        <version>0.9.1</version>
 		</dependency>
 		
 		<dependency> 
